--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 </li><li class="u-nav-item"><a class="u-btn-text u-button-style u-nav-link" href="#" data-page-id="42188" style="padding: 8px 0;">Наши фотографии</a>
 </li><li class="u-nav-item"><a class="u-btn-text u-button-style u-nav-link" href="#" data-page-id="42191" style="padding: 8px 0;">Истории</a>
 
-</li></ul>
+</li>
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
             <img src="../img/debs96j-3c740e9b-9084-4526-a8ea-e42decd99338.png" alt="">
@@ -729,22 +729,22 @@
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-15 u-size-30-md ">
-                  <div class="u-container-layout" src="">
+                  <div class="u-container-layout">
                     <img src="/engine/img/section_5_cat_001.jpg" height="300px" width="270px" alt="">
                   </div>
               </div>
               <div class="u-align-left u-container-style  u-layout-cell u-size-15 u-size-30-md ">
-                <div class="u-container-layout" src="">
+                <div class="u-container-layout">
                   <img src="/engine/img/section_5_cat_002.jpg" height="300px" width="270px" alt="">
                 </div>
               </div>
               <div class="u-align-left u-container-style u-layout-cell u-size-15 u-size-30-md ">
-                <div class="u-container-layout" src="">
+                <div class="u-container-layout" >
                   <img src="/engine/img/section_5_cat_003.jpg" height="300px" width="270px" alt="">
                 </div>
               </div>
               <div class="u-align-left u-container-style  u-layout-cell u-right-cell u-size-15 u-size-30-md">
-                <div class="u-container-layout" src="">
+                <div class="u-container-layout" >
                   <img src="/engine/img/section_5_cat_004.jpg" height="300px" width="270px" alt="">
                 </div>
               </div>
@@ -778,8 +778,8 @@
           </div>
         </div>
         <div class="u-align-left u-container-style u-expanded-width-sm u-expanded-width-xs u-group  u-shading ">
-          <div class="u-container-layout u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-valign-middle-xs u-container-layout-2" src="">
-              <img src="./img/section_5_cat_007.jpg">
+          <div class="u-container-layout u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-valign-middle-xs u-container-layout-2">
+              <img src="./img/section_5_cat_007.jpg" alt=''>
               <div class="u-align-left u-container-style u-expanded-width-sm u-expanded-width-xs u-group u-group-3">
                   <div class="u-container-layout u-valign-middle u-container-layout-3">
 
